--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <frameset cols="100%">
-      <frame src="ugrad.cs.jhu.edu/~lgoldin1/openingpage.php"></frame>
+      <frame src="http://ugrad.cs.jhu.edu/~lgoldin1/openingpage.php"></frame>
     </frameset>
     
 
